--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "John Frier",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.6.4"
+    "angular": "^1.6.4",
+    "angular-route": "^1.6.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.4",
