--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "angular-mocks": "^1.6.4",
     "jasmine": "^2.5.3",
+    "jasmine-jquery": "^2.1.1",
+    "jquery": "^3.2.1",
     "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0"
